# Model-EVAL

./: .env.example  .gitignore  Claude.md  Copy of HECVAT413.xlsx  Makefile  README.md  app.py  pyproject.toml
backend/: __init__.py  benchmark_runner.py  config.py  hecvat_parser.py  knowledge_base.py  models.py  ollama_client.py  results_writer.py
config/: hecvat_profile.yaml
config/prompts/: gap_analysis.txt
docs/: OPEN_DECISIONS.md  benchmark_results.md
gui/: app.py
samples/: build_sample.py  sample_hecvat_template.xlsx  sample_policy.md
tests/: conftest.py  test_benchmark_runner.py  test_hecvat_parser.py  test_results_writer.py
