[project]
name = "aegis-prototype"
version = "0.1.0"
description = "Aegis Model Evaluation Prototype — local LLM benchmark harness for HECVAT gap analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "chromadb>=0.5",
    "openpyxl>=3.1",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "streamlit>=1.36",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.setuptools]
packages = ["backend", "gui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
